[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/anima/ui/property/AnimaPivotButton.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/components/Carousel.tscn" type="PackedScene" id=2]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="ButtonGroup" id=4]

[node name="PivotButton" type="VBoxContainer"]
anchor_right = 1.0
margin_right = -808.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 216.0
margin_bottom = 37.0

[node name="IgnoreButton" type="Button" parent="HBoxContainer"]
margin_right = 104.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Ignore"

[node name="PointButton" type="Button" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 216.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 2 )
text = "Point"

[node name="Carousel" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 45.0
margin_right = 216.0
margin_bottom = 45.0
rect_min_size = Vector2( 216, 0 )
rect_pivot_offset = Vector2( 108, 0 )
duration = 0.5
scroll_easing = 1
height_easing = 28

[node name="Controls" parent="Carousel" index="0"]
margin_right = 216.0

[node name="Wrapper" parent="Carousel" index="1"]
margin_right = 216.0
rect_pivot_offset = Vector2( 108, 0 )
mouse_filter = 2

[node name="Container" parent="Carousel/Wrapper" index="0"]
margin_right = 216.0
margin_bottom = 111.0
rect_min_size = Vector2( 432, 0 )
rect_pivot_offset = Vector2( 216, 55.5 )

[node name="Empty" type="Control" parent="Carousel/Wrapper/Container" index="0"]
margin_right = 212.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="Carousel/Wrapper/Container" index="1"]
margin_left = 220.0
margin_right = 432.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 98 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="Button" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_right = 70.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Top Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
pressed = true
group = SubResource( 4 )
align = 2

[node name="Button2" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 70.0
margin_right = 140.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )
__meta__ = {
"_editor_description_": "Top Center"
}

[node name="Button3" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 140.0
margin_right = 210.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Top Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button4" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_top = 37.0
margin_right = 70.0
margin_bottom = 74.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Center Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button5" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 70.0
margin_top = 37.0
margin_right = 140.0
margin_bottom = 74.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Center"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button6" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 140.0
margin_top = 37.0
margin_right = 210.0
margin_bottom = 74.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Center Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button7" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_top = 74.0
margin_right = 70.0
margin_bottom = 111.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Bottom Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button8" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 70.0
margin_top = 74.0
margin_right = 140.0
margin_bottom = 111.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Bottom Center"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button9" type="Button" parent="Carousel/Wrapper/Container/GridContainer"]
margin_left = 140.0
margin_top = 74.0
margin_right = 210.0
margin_bottom = 111.0
rect_min_size = Vector2( 24, 32 )
hint_tooltip = "Bottom Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[connection signal="pressed" from="HBoxContainer/IgnoreButton" to="." method="_on_IgnoreButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PointButton" to="." method="_on_PointButton_pressed"]
[connection signal="carousel_height_changed" from="Carousel" to="." method="_on_Carousel_carousel_height_changed"]
[connection signal="carousel_size_changed" from="Carousel" to="." method="_on_Carousel_carousel_size_changed"]
[connection signal="index_changed" from="Carousel" to="." method="_on_Carousel_index_changed"]

[editable path="Carousel"]
